[package]
name = "rust-sorting"
version = "0.1.0"
authors = ["MichalObi <ndwz123@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.39"
js-sys = "0.3.16"
wasm-bindgen-test = "0.2.39"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window"
]
