[package]
name = "rust-sorting"
version = "1.0.0"
authors = ["MichalObi <ndwz123@gmail.com>"]
edition = "2018"
description = "Rust sorting and js canvas visualization via WASM."
repository = "https://github.com/MichalObi/sorting-visualization-rust-canvas"
readme = "README.md"
license = "WTFPL"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.39"
js-sys = "0.3.16"
wasm-bindgen-test = "0.2.39"
console_log = "0.1.2"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window"
]
